common/objects/StoreCountryCode__c/StoreCountryCode__c.object-meta.xml
<CustomObject>
    <description>Valid Country Codes for a particular webstore</description>
    <label>Store Country Code</label>
    <nameField>
        <displayFormat>SCC-{000000}</displayFormat>
        <label>StoreCountryCode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Country Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>